--- a/app/presentation/views_html/video.slim
+++ b/app/presentation/views_html/video.slim
@@ -29,7 +29,7 @@
           // Reload page at 100%
           if (message == "100") {
             setTimeout(function () {
-              window.location = window.location.href
+              window.location.reload()
             }, 1000);
           }
         }
