--- a/app/presentation/views_html/video.slim
+++ b/app/presentation/views_html/video.slim
@@ -47,7 +47,7 @@
   .row
     - video_info.comments.each do |comment|
       .comments_display
-        = comment.text_display
+        = comment.text_original
 
         
             
