--- a/app/presentation/views_html/layout.slim
+++ b/app/presentation/views_html/layout.slim
@@ -3,6 +3,8 @@ html
   head
     title Ü-Feeling
 
+    meta name="viewport" content="width=device-width, initial-scale=1"
+
     / Bootstrap CSS and theme (United Theme)
     link{
       href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.2/dist/superhero/bootstrap.min.css"
@@ -39,11 +41,11 @@ html
       crossorigin="anonymous"
     }
 
-    .container id='html_body'
+    .container
       section
-        .row style="vertical-align: middle;"
+        .row
           .col-12
-            h1.p-2
+            h1.pt-3.pb-3.text-center.text-md-start
               a.text-underline-hover href="/" Ü-Feeling
 
       section
