--- a/app/presentation/views_html/home.slim
+++ b/app/presentation/views_html/home.slim
@@ -1,64 +1,54 @@
-.row
-  .col.blank-row-half
+form role="form" action="/videos" method='POST' id='show-video'
+  .row.vertical-align.query-bar
+    .col-lg-10.col-md-9.col-sm-8.col-12
+      input { 
+        type='text' 
+        id='video_url' 
+        name='video_url' 
+        class="form-control"
+        placeholder="https://www.youtube.com/watch?v=jgkBk4soOMI"
+      }
+      
+    .col-lg-2.col-md-3.col-sm-4.col-12
+      button { 
+        type='submit' id='show-video-submit' class='submit' 
+        value='submit' class="btn btn-primary"
+      } Get Analysis
+  - if info.viewed_videos.any?
+    .row
+      .col-md-12.col-sm-3.blank-row
+      .subtitle My videos:
 
-  form role="form" action="/videos" method='POST' id='show-video'
-    row.vertical-align.query-bar
-      .col-md-10.col-sm-9
-        input { 
-          type='text' 
-          id='video_url' 
-          name='video_url' 
-          class="form-control"
-          placeholder="https://www.youtube.com/watch?v=jgkBk4soOMI"
-        }
-       
-      .col-md-2.col-sm-3
-        button { 
-          type='submit' id='show-video-submit' class='submit' 
-          value='submit' class="btn btn-primary"
-        } Get Analysis
-    - if info.viewed_videos.any?
-      .row
-        .col-md-12.col-sm-3.blank-row
-        .subtitle My videos:
+    .row
+      - info.viewed_videos.each do |video|
+        .col-lg-3.col-md-4.col-sm-6.col-xs-12.pb-4
+          img class = "video_img1" src="#{video.video_image}"
+          .video_desc
+            = video.video_title
+          .query-bar2
+            i class="fa-solid fa-face-smile-beam mx-2"
+            a href="videos/#{video.origin_id}" class="btn btn-secondary" View
 
-      .row
-        - info.viewed_videos.each do |video|
-          .col-lg-3.col-md-4.col-sm-6.col-xs-12
-
-            img class = "video_img1" src="#{video.video_image}"
-            .video_desc 
-              = video.video_title
-            .query-bar2
-              i class="fa-solid fa-face-smile-beam mx-2"
-              a href="videos/#{video.origin_id}" class="btn btn-secondary" View
-
-    
-    - if info.categories.any?
-      .row
-        .col-md-12.col-sm-3.blank-row-half
-        .subtitle Other videos you might like:
-
-      #myBtnContainer
-        - info.categories.each do |category|
-          a class="btn m-1 #{category.origin_id == info.category_selected ? 'btn-primary' : 'btn-outline-primary'}" href="/?category=#{category.origin_id}"  #{category.category_title} 
-
-        .blank-row
   
-    - if info.videos_by_categories.any?
-      .row
-        - info.videos_by_categories.each do |video|
-          .col-lg-3.col-md-4.col-sm-6.col-xs-12
+  - if info.categories.any?
+    .row
+      .col-md-12.col-sm-3.blank-row-half
+      .subtitle Other videos you might like:
 
-            img class = "video_img1" src="#{video.video_image}"
-            .video_desc 
-              = video.video_title
-            .query-bar2
-              i class="fa-solid fa-face-frown mx-2"
-              a href="videos/#{video.origin_id}" class="btn btn-secondary" View
+    #myBtnContainer
+      - info.categories.each do |category|
+        a class="btn m-1 #{category.origin_id == info.category_selected ? 'btn-primary' : 'btn-outline-primary'}" href="/?category=#{category.origin_id}"  #{category.category_title} 
 
+      .blank-row
 
+  - if info.videos_by_categories.any?
+    .row
+      - info.videos_by_categories.each_withouth(info.viewed_videos.ids).each do |video|
+        .col-lg-3.col-md-4.col-sm-6.col-xs-12.pb-4
 
-
-
-    
+          img class = "video_img1" src="#{video.video_image}"
+          .video_desc 
+            = video.video_title
+          .query-bar2
+            i class="fa-solid fa-face-frown mx-2"
+            a href="videos/#{video.origin_id}" class="btn btn-secondary" View
