--- a/app/presentation/assets/css/style.css
+++ b/app/presentation/assets/css/style.css
@@ -1,8 +1,8 @@
 body {
   padding-bottom: 50px;
 }
+
 h1 {
-  font-weight: 100;
   text-decoration: none;
 }
 
@@ -35,11 +35,10 @@ h1 {
 }
 
 .subtitle {
-  font-size: 35px;
   color: #ffff;
 }
 
-.video_desc {
+.video-desc {
   font-size: 0.8rem;
   color: #ffffff;
   word-break: break-word;
@@ -141,11 +140,18 @@ footer {
 }
 
 .fa-face-smile-beam {
-  color: #5cb85c;
   font-size: 30px;
 }
 
 .fa-face-frown {
-  color: red;
   font-size: 30px;
+}
+
+.fa-face-meh-blank {
+  font-size: 30px;
+}
+
+.video-general-chart {
+  max-width: 100%;
+  max-height: 350px;
 }
