--- a/app/presentation/views_html/video.slim
+++ b/app/presentation/views_html/video.slim
@@ -1,57 +1,61 @@
-.container
-  img src=bar_chart
-  - bar_chart
-  - if processing.in_progress?
-    .progress
-    .progress-bar.bg-success.progress-bar-striped.active[
-      role="progressbar" aria-valuenow="10" aria-valuemin="0"
-      aria-valuemax="100" style="width:0%"]
-    script src = "#{processing.ws_javascript}"
-    javascript:
-      var channel = "#{processing.ws_channel_id}";
-      var client = new Faye.Client("#{processing.ws_route}");
-      var bar = document.getElementsByClassName("progress-bar")[0];
-      var reg = /\:(\d+)%/
-      client.subscribe('/' + channel, function(message) {
-        // Collect progressbar element and percentage
-        var progress = bar.getAttribute("style")
-        var currentProgress = reg.exec(progress)[1]
-        
-        if (isNaN(message)) {
-          bar.setAttribute("style", "width:100%")
-          bar.setAttribute("class", "progress-bar bg-danger progress-bar-striped")
-          bar.innerHTML = message
-        } else {
-          if (parseInt(message) > parseInt(currentProgress)) {
-            // Set the progress bar and percentage
-            bar.setAttribute("aria-valuenow", message)
-            bar.setAttribute("style", "width:"+message+"%")
-            bar.innerHTML = message+"%"
+- if processing.in_progress?
+  .progress
+  .progress-bar.bg-success.progress-bar-striped.active[
+    role="progressbar" aria-valuenow="10" aria-valuemin="0"
+    aria-valuemax="100" style="width:0%"]
+  script src = "#{processing.ws_javascript}"
+  javascript:
+    var channel = "#{processing.ws_channel_id}";
+    var client = new Faye.Client("#{processing.ws_route}");
+    var bar = document.getElementsByClassName("progress-bar")[0];
+    var reg = /\:(\d+)%/
+    client.subscribe('/' + channel, function(message) {
+      // Collect progressbar element and percentage
+      var progress = bar.getAttribute("style")
+      var currentProgress = reg.exec(progress)[1]
+      
+      if (isNaN(message)) {
+        bar.setAttribute("style", "width:100%")
+        bar.setAttribute("class", "progress-bar bg-danger progress-bar-striped")
+        bar.innerHTML = message
+      } else {
+        if (parseInt(message) > parseInt(currentProgress)) {
+          // Set the progress bar and percentage
+          bar.setAttribute("aria-valuenow", message)
+          bar.setAttribute("style", "width:"+message+"%")
+          bar.innerHTML = message+"%"
 
-            // Reload page at 100%
-            if (message == "100") {
-              setTimeout(function () {
-                window.location.reload()
-              }, 500);
-            }
+          // Reload page at 100%
+          if (message == "100") {
+            setTimeout(function () {
+              window.location.reload()
+            }, 500);
           }
         }
-      });
-  -  else
-    .row
-      .title Title: 
-      .title-value = video_info.video_title
-    br
-    .row
-      .description Description: 
-      .description-value = video_info.video_description
+      }
+    });
+-  else
+  .row
+    .col-12.col-md-7.col-lg-7.col-xl-6
+      iframe width="100%" height="350" src="https://www.youtube.com/embed/#{video_info.origin_id}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen
+    .col-12.col-md-5.col-lg-5.col-xl.6.text-center
+      img.video-general-chart src=bar_chart
+  
+  .row
+    h2.title
+      = video_info.video_title
 
-    .row
-      - video_info.comments.each do |comment|
-        .comments_display
-          br
-          = "#{comment.published_info.year}-#{comment.published_info.month}-#{comment.published_info.day}: #{comment.sentiment.sentiment_name} - #{comment.sentiment.sentiment_score}"
-          br
-          = "- #{comment.text_original}"
+  .comments.mt-4
+    - video_info.comments.each do |comment|
+      .row
+        .col-auto
+          - if comment.positive?
+            i.fa-solid.fa-face-smile-beam.text-success
+          - if comment.neutral?
+            i.fa-solid.fa-face-meh-blank.text-warning
+          - if comment.negative?
+            i.fa-solid.fa-face-frown.text-danger
+        .col
+          = comment.text_original
 
-        
+          
