--- a/app/presentation/views_html/video.slim
+++ b/app/presentation/views_html/video.slim
@@ -35,11 +35,11 @@
       }
     });
 -  else
-  .row
+  .row.align-items-center
     .col-12.col-md-7.col-lg-7.col-xl-6
       iframe width="100%" height="350" src="https://www.youtube.com/embed/#{video_info.origin_id}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen
     .col-12.col-md-5.col-lg-5.col-xl.6.text-center
-      img.video-general-chart src=bar_chart
+      img.video-general-chart src=video_info.comments_summary
   
   .row
     h2.title
