--- a/app/presentation/views_html/layout.slim
+++ b/app/presentation/views_html/layout.slim
@@ -11,6 +11,26 @@ html
       rel="stylesheet" 
       crossorigin="anonymous"
     }
+
+    script{ 
+      src="https://code.highcharts.com/highcharts.js"
+      crossorigin="anonymous" 
+    }
+
+    script{ 
+      src="https://code.highcharts.com/modules/exporting.js"
+      crossorigin="anonymous" 
+    }
+
+    script{ 
+      src="https://code.highcharts.com/modules/export-data.js"
+      crossorigin="anonymous" 
+    }
+
+    script{ 
+      src="https://code.highcharts.com/modules/accessibility.js"
+      crossorigin="anonymous" 
+    }
     
     / Custom CSS
     / link rel='stylesheet' href='/presentation/assets/css/style.css'
