--- a/app/presentation/views_html/video.slim
+++ b/app/presentation/views_html/video.slim
@@ -39,7 +39,49 @@
     .col-12.col-md-7.col-lg-7.col-xl-6
       iframe width="100%" height="350" src="https://www.youtube.com/embed/#{video_info.origin_id}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen
     .col-12.col-md-5.col-lg-5.col-xl.6.text-center
-      img.video-general-chart src=video_info.comments_summary
+      #container
+
+  javascript: 
+    var pieColors = ["#5db85b", "#ffc008", "#d9534f"];
+
+    // Build the chart
+    Highcharts.chart('container', {
+      chart: {
+        plotBackgroundColor: "#0f2437",
+        type: 'pie'
+      },
+      title: {
+        text: '#{video_info.comments_summary[:title]}'
+      },
+      tooltip: {
+        pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+      },
+      accessibility: {
+        point: {
+          valueSuffix: '%'
+        }
+      },
+      plotOptions: {
+        pie: {
+          allowPointSelect: true,
+          cursor: 'pointer',
+          colors: pieColors,
+          dataLabels: {
+            enabled: true,
+            format: '<b>{point.name}</b><br>{point.percentage:.1f} %'
+          }
+        }
+      },
+      series: [{
+        name: 'Comments',
+        data: [
+          { name: 'Positive', y: #{video_info.comments_summary[:positive_count]} },
+          { name: 'Neutral', y: #{video_info.comments_summary[:neutral_count]} },
+          { name: 'Negative', y: #{video_info.comments_summary[:negative_count]} }
+        ]
+      }]
+    });
+  
   
   .row
     h2.title
