--- a/app/presentation/views_html/video.slim
+++ b/app/presentation/views_html/video.slim
@@ -59,7 +59,7 @@
     a class="btn m-1 btn-primary" href="/"  All
     a class="btn m-1 btn-outline-primary" href="/"  Positive
     a class="btn m-1 btn-outline-primary" href="/"  Neutral 
-    a class="btn m-1 btn-outline-primary" href="/"  Positive
+    a class="btn m-1 btn-outline-primary" href="/"  Negative
 
     - video_info.comments.each do |comment|
       .row.mb-4.mt-2
