--- a/app/presentation/assets/css/style.css
+++ b/app/presentation/assets/css/style.css
@@ -139,15 +139,10 @@ footer {
   position: fixed;
 }
 
-.fa-face-smile-beam {
-  font-size: 30px;
-}
-
-.fa-face-frown {
-  font-size: 30px;
-}
-
-.fa-face-meh-blank {
+.fa-face-smile-beam,
+.fa-face-frown,
+.fa-face-meh-blank,
+.fa-face-grimace {
   font-size: 30px;
 }
 
