--- a/app/presentation/views_html/video.slim
+++ b/app/presentation/views_html/video.slim
@@ -77,7 +77,7 @@
               = comment.published_date 
               = " - "
               = comment.author_name
-            img.ms-1 height="15" alt="#{comment.language_name}" src="https://www.unknown.nu/flags/images/#{comment.language_code}-100"
+            img.ms-1 height="15" alt="#{comment.language_name}" src="#{comment.language_img}"
             span.ms-1
               = " - "
               = comment.language_name
