--- a/app/presentation/views_html/video.slim
+++ b/app/presentation/views_html/video.slim
@@ -47,47 +47,204 @@
     .col-12.col-md-7.col-lg-7.col-xl-6
       iframe width="100%" height="350" src="https://www.youtube.com/embed/#{video_info.origin_id}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen
     .col-12.col-md-5.col-lg-5.col-xl.6.text-center
-      #container
+      #pie-container
 
-  hr
 
-  .comments.mt-4
-    h4 
-      = "Comments"
-      i.fa-solid.fa-rotate.text-primary.ms-2
+  ul.nav.nav-tabs
+    li.nav-item 
+      a class="nav-link #{video_info.show_comments? ? 'active' : ''}" href="?view=comments" Comments
+    li.nav-item 
+      a class="nav-link #{video_info.show_comments_trend? ? 'active' : ''}" href="?view=comments-trend" Comments Sentiment Trend
+    li.nav-item 
+      a class="nav-link #{video_info.show_video_trend? ? 'active' : ''}" href="?view=video-trend" Video Sentiment Trend
+    li.nav-item 
+      a class="nav-link " href="?view=video-sentiment" 
+        h5.m-0
+          i.fa-solid.fa-rotate.text-primary.ms
 
-    - video_info.sentiments.each do |sentiment|
-      a class="btn m-1 #{sentiment.id == video_info.sentiment_selected ? 'btn-primary' : 'btn-outline-primary'}" href="#{video_info.sentiment_comments_url(sentiment.id)}"
-        = sentiment.name_display
+  - if video_info.show_comments_trend?
+    #trend-container
+    #line-container
 
-    - video_info.comments.each do |comment|
-      .row.mb-4.mt-2
-        .col-auto.pt-1
-          - if comment.positive?
-            i.fa-solid.fa-face-smile-beam.text-success
-          - if comment.neutral?
-            i.fa-solid.fa-face-meh-blank.text-secondary
-          - if comment.negative?
-            i.fa-solid.fa-face-frown.text-danger
-          - if comment.mixed?
-            i.fa-solid.fa-face-grimace.text-warning
-        .col
-          .comment-info
-            span
-              = comment.published_date 
-              = " - "
-              = comment.author_name
-            img.ms-1 height="15" alt="#{comment.language_name}" src="#{comment.language_img}"
-            span.ms-1
-              = " - "
-              = comment.language_name
-          = comment.text_original
+  - if video_info.show_comments?
+    .comments.mt-2
+      .sentiments
+        - video_info.sentiments.each do |sentiment|
+          a class="btn m-1 #{sentiment.id == video_info.sentiment_selected ? 'btn-primary' : 'btn-outline-primary'}" href="#{video_info.sentiment_comments_url(sentiment.id)}"
+            = sentiment.name_display
 
+      - video_info.comments.each do |comment|
+        .row.mb-4.mt-2
+          .col-auto.pt-1
+            - if comment.positive?
+              i.fa-solid.fa-face-smile-beam.text-success
+            - if comment.neutral?
+              i.fa-solid.fa-face-meh-blank.text-secondary
+            - if comment.negative?
+              i.fa-solid.fa-face-frown.text-danger
+            - if comment.mixed?
+              i.fa-solid.fa-face-grimace.text-warning
+          .col
+            .comment-info
+              span
+                = comment.published_date 
+                = " - "
+                = comment.author_name
+              img.ms-1 height="15" alt="#{comment.language_name}" src="#{comment.language_img}"
+              span.ms-1
+                = " - "
+                = comment.language_name
+            = comment.text_original
+
+  / Day Comments
+  javascript: 
+    Highcharts.chart('line-container', {
+        chart: {
+            type: 'column'
+        },
+        title: {
+            text: 'Major trophies for some English teams',
+            align: 'left'
+        },
+        xAxis: {
+            categories: ['01/01', '02/02', '03/03', '04/04']
+        },
+        yAxis: {
+            min: 0,
+            title: {
+                text: 'Count Comments'
+            },
+            stackLabels: {
+                enabled: true,
+                style: {
+                    fontWeight: 'bold',
+                    color: ( // theme
+                        Highcharts.defaultOptions.title.style &&
+                        Highcharts.defaultOptions.title.style.color
+                    ) || 'gray',
+                    textOutline: 'none'
+                }
+            }
+        },
+        legend: {
+            align: 'left',
+            x: 70,
+            verticalAlign: 'top',
+            y: 70,
+            floating: true,
+            backgroundColor:
+                Highcharts.defaultOptions.legend.backgroundColor || 'white',
+            borderColor: '#CCC',
+            borderWidth: 1,
+            shadow: false
+        },
+        tooltip: {
+            headerFormat: '<b>{point.x}</b><br/>',
+            pointFormat: '{series.name}: {point.y}<br/>Total: {point.stackTotal}'
+        },
+        plotOptions: {
+            column: {
+                stacking: 'normal',
+                dataLabels: {
+                    enabled: true
+                }
+            }
+        },
+        series: [{
+            name: 'Positive',
+            color: "#5db85b",
+            data: [3, 5, 1, 13]
+        }, {
+            name: 'Mixed',
+            color: "#ffc008", 
+            data: [14, 8, 8, 12]
+        }, {
+            name: 'Negative',
+            color: "#d9534f",
+            data: [20, 2, 6, 3]
+        }, {
+            name: 'Neutral',
+            color: "#4e5d6c",
+            data: [0, 2, 6, 3]
+        }]
+    });
+
+  javascript:
+    Highcharts.chart('trend-container', {
+        chart: {
+            type: 'area'
+        },
+        title: {
+            useHTML: true,
+            text: 'Countries/regions with highest Gt CO<sub>2</sub>-emissions'
+        },
+        subtitle: {
+            text: 'Source: ' +
+                '<a href="https://energiogklima.no/klimavakten/land-med-hoyest-utslipp/"' +
+                'target="_blank">Energi og Klima</a>'
+        },
+        accessibility: {
+            point: {
+                valueDescriptionFormat: '{index}. {point.category}, {point.y:,.1f} billions, {point.percentage:.1f}%.'
+            }
+        },
+        yAxis: {
+            labels: {
+                format: '{value}%'
+            },
+            title: {
+                enabled: false
+            }
+        },
+        tooltip: {
+            pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.percentage:.1f}%</b> ({point.y:,.1f} billion Gt)<br/>',
+            split: true
+        },
+        plotOptions: {
+            series: {
+                pointStart: 1990
+            },
+            area: {
+                stacking: 'percent',
+                marker: {
+                    enabled: false
+                }
+            }
+        },
+        series: [{
+            name: 'China',
+            color: '#5db85b',
+            data: [2.5, 2.6, 2.7, 2.9, 3.1, 3.4, 3.5, 3.5, 3.4, 3.4, 3.4,
+                3.5, 3.9, 4.5, 5.2, 5.9, 6.5, 7, 7.5, 7.9, 8.6, 9.5, 9.8,
+                10, 10, 9.8, 9.7, 9.9, 10.3, 10.5, 10.7, 10.9
+            ]
+        }, {
+            name: 'USA',
+            color: "#ffc008",
+            data: [5.1, 5.1, 5.2, 5.3, 5.4, 5.4, 5.6, 5.7, 5.7, 5.8, 6, 5.9,
+                5.9, 6, 6.1, 6.1, 6.1, 6.1, 5.9, 5.5, 5.7, 5.5, 5.3, 5.5,
+                5.5, 5.4, 5.2, 5.2, 5.4, 5.3, 4.7, 5
+            ]
+        }, {
+            name: 'EU',
+            color: "#d9534f",
+            data: [3.9, 3.8, 3.7, 3.6, 3.6, 3.6, 3.7, 3.7, 3.6, 3.6, 3.6, 3.7,
+                3.7, 3.7, 3.8, 3.7, 3.7, 3.7, 3.6, 3.3, 3.4, 3.3, 3.3, 3.2, 3,
+                3.1, 3.1, 3.1, 3, 2.9, 2.6, 2.7]
+        }, {
+            name: 'India',
+            color: "#4e5d6c",
+            data: [0.6, 0.6, 0.7, 0.7, 0.7, 0.8, 0.8, 0.9, 0.9, 1, 1, 1,
+                1, 1.1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 2, 2,
+                2.2, 2.3, 2.4, 2.4, 2.6, 2.6, 2.4, 2.7]
+        }]
+    });
+  
   javascript: 
     var pieColors = ["#5db85b", "#ffc008", "#d9534f", "#4e5d6c"];
 
     // Build the chart
-    Highcharts.chart('container', {
+    Highcharts.chart('pie-container', {
       chart: {
         plotBackgroundColor: "#0f2537",
         type: 'pie'
