--- a/app/presentation/views_html/video.slim
+++ b/app/presentation/views_html/video.slim
@@ -35,6 +35,7 @@
       }
     });
 -  else
+  / Video and summary
   .row.align-items-center
     .col-12
       h3.title.mb-0
@@ -50,6 +51,7 @@
       #pie-container
 
 
+  / navigator
   ul.nav.nav-tabs
     li.nav-item 
       a class="nav-link #{video_info.show_comments? ? 'active' : ''}" href="?view=comments" Comments
@@ -59,13 +61,20 @@
       a class="nav-link #{video_info.show_video_trend? ? 'active' : ''}" href="?view=video-trend" Video Sentiment Trend
     li.nav-item 
       a class="nav-link " href="?view=video-sentiment" 
-        h5.m-0
-          i.fa-solid.fa-rotate.text-primary.ms
+        h5.m-0 
+          i.fa-solid.fa-rotate.text-primary.ms data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Update Comments"
 
+  / No Comments
+  - unless video_info.comments.any?
+    button data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Update Comments" Test
+    .h4.p-4.text-center.text-warning  The video requested does not have any comment yet. Please update try again later.
+
+  / Comments trend
   - if video_info.show_comments_trend?
     #trend-container
     #line-container
 
+  / Comments
   - if video_info.show_comments?
     .comments.mt-2
       .sentiments
@@ -96,18 +105,38 @@
                 = comment.language_name
             = comment.text_original
 
+  
+  
   / Day Comments
+
+  javascript: 
+    var comments_trend = {
+      dates: [],
+      positive: [],
+      negative: [],
+      neutral: [],
+      mixed: [],
+    };
+
+  - video_info.comments.dates.each do |date|
+    javascript: 
+      comments_trend.dates.push("#{date}");
+      comments_trend.positive.push(#{video_info.comments.positive_count(date:)});
+      comments_trend.negative.push(#{video_info.comments.negative_count(date:)});
+      comments_trend.neutral.push(#{video_info.comments.neutral_count(date:)});
+      comments_trend.mixed.push(#{video_info.comments.mixed_count(date:)});
+
   javascript: 
     Highcharts.chart('line-container', {
         chart: {
             type: 'column'
         },
         title: {
-            text: 'Major trophies for some English teams',
+            text: 'Comments Sentiment Percentage',
             align: 'left'
         },
         xAxis: {
-            categories: ['01/01', '02/02', '03/03', '04/04']
+            categories: comments_trend.dates
         },
         yAxis: {
             min: 0,
@@ -153,19 +182,19 @@
         series: [{
             name: 'Positive',
             color: "#5db85b",
-            data: [3, 5, 1, 13]
+            data: comments_trend.positive
         }, {
             name: 'Mixed',
             color: "#ffc008", 
-            data: [14, 8, 8, 12]
+            data: comments_trend.mixed
         }, {
             name: 'Negative',
             color: "#d9534f",
-            data: [20, 2, 6, 3]
+            data: comments_trend.negative
         }, {
             name: 'Neutral',
             color: "#4e5d6c",
-            data: [0, 2, 6, 3]
+            data: comments_trend.neutral
         }]
     });
 
@@ -176,7 +205,7 @@
         },
         title: {
             useHTML: true,
-            text: 'Countries/regions with highest Gt CO<sub>2</sub>-emissions'
+            text: 'Comments Sentiment Percentage Distribution'
         },
         subtitle: {
             text: 'Source: ' +
@@ -185,7 +214,7 @@
         },
         accessibility: {
             point: {
-                valueDescriptionFormat: '{index}. {point.category}, {point.y:,.1f} billions, {point.percentage:.1f}%.'
+                valueDescriptionFormat: '{index}. {point.category}, {point.y:,.1f} comments, {point.percentage:.1f}%.'
             }
         },
         yAxis: {
@@ -197,7 +226,7 @@
             }
         },
         tooltip: {
-            pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.percentage:.1f}%</b> ({point.y:,.1f} billion Gt)<br/>',
+            pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.percentage:.1f}%</b> ({point.y:,.1f} comments)<br/>',
             split: true
         },
         plotOptions: {
@@ -212,31 +241,21 @@
             }
         },
         series: [{
-            name: 'China',
+            name: 'Positive',
             color: '#5db85b',
-            data: [2.5, 2.6, 2.7, 2.9, 3.1, 3.4, 3.5, 3.5, 3.4, 3.4, 3.4,
-                3.5, 3.9, 4.5, 5.2, 5.9, 6.5, 7, 7.5, 7.9, 8.6, 9.5, 9.8,
-                10, 10, 9.8, 9.7, 9.9, 10.3, 10.5, 10.7, 10.9
-            ]
+            data: comments_trend.positive
         }, {
-            name: 'USA',
+            name: 'Mixed',
             color: "#ffc008",
-            data: [5.1, 5.1, 5.2, 5.3, 5.4, 5.4, 5.6, 5.7, 5.7, 5.8, 6, 5.9,
-                5.9, 6, 6.1, 6.1, 6.1, 6.1, 5.9, 5.5, 5.7, 5.5, 5.3, 5.5,
-                5.5, 5.4, 5.2, 5.2, 5.4, 5.3, 4.7, 5
-            ]
+            data: comments_trend.mixed
         }, {
-            name: 'EU',
+            name: 'Negative',
             color: "#d9534f",
-            data: [3.9, 3.8, 3.7, 3.6, 3.6, 3.6, 3.7, 3.7, 3.6, 3.6, 3.6, 3.7,
-                3.7, 3.7, 3.8, 3.7, 3.7, 3.7, 3.6, 3.3, 3.4, 3.3, 3.3, 3.2, 3,
-                3.1, 3.1, 3.1, 3, 2.9, 2.6, 2.7]
+            data: comments_trend.negative
         }, {
-            name: 'India',
+            name: 'Neutral',
             color: "#4e5d6c",
-            data: [0.6, 0.6, 0.7, 0.7, 0.7, 0.8, 0.8, 0.9, 0.9, 1, 1, 1,
-                1, 1.1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 2, 2,
-                2.2, 2.3, 2.4, 2.4, 2.6, 2.6, 2.4, 2.7]
+            data: comments_trend.neutral
         }]
     });
   
