--- a/app/presentation/views_html/layout.slim
+++ b/app/presentation/views_html/layout.slim
@@ -63,9 +63,10 @@ html
       section
         .row
           .col-12
-            h1.pt-3.pb-3.text-center.text-md-start
+            h1.pt-3.mb-0.text-center.text-md-start
               a.text-underline-hover href="/" Ü-Feeling
 
+      hr.mt-2.mb-4
       section
         include :flash_bar
         == yield
