--- a/app/presentation/views_html/video.slim
+++ b/app/presentation/views_html/video.slim
@@ -57,8 +57,8 @@
       a class="nav-link #{video_info.show_comments? ? 'active' : ''}" href="?view=comments" Comments
     li.nav-item 
       a class="nav-link #{video_info.show_comments_trend? ? 'active' : ''}" href="?view=comments-trend" Comments Sentiment Trend
-    li.nav-item 
-      a class="nav-link #{video_info.show_video_trend? ? 'active' : ''}" href="?view=video-trend" Video Sentiment Trend
+    / li.nav-item 
+    /   a class="nav-link #{video_info.show_video_trend? ? 'active' : ''}" href="?view=video-trend" Video Sentiment Trend
     li.nav-item 
       a class="nav-link " href="?view=video-sentiment" 
         h5.m-0 
